restructuring the webpage again

--- a/index.html
+++ b/index.html
@@ -49,34 +49,34 @@
       <h2 id="projects" class="projects">HTML/CSS Projects</h2>
       <div class="row project-tile">
         <div class="column centered">
-          <a href="http://www.rockoftheearth.com/johncena"><img src="../public/images/cenapageimage.png"
+          <a href="http://www.rockoftheearth.com/johncena"><img src="./images/cenapageimage.png"
               alt="john cena page screenshot" /></a>
           <p>Tribute Webpage for actor and legend John Cena</p>
         </div>
         <div class="column centered">
-          <a href="http://www.rockoftheearth.com/google"><img src="../public/images/googlepageimage.png"
+          <a href="http://www.rockoftheearth.com/google"><img src="./images/googlepageimage.png"
               alt="google page screenshot" /></a>
           <p>Nonfuctional Recreation of the Google Homepage</p>
         </div>
         <div class="column centered">
-          <a href="http://www.rockoftheearth.com/survey"><img src="../public/images/surveypageimage.png"
+          <a href="http://www.rockoftheearth.com/survey"><img src="./images/surveypageimage.png"
               alt="survey page screenshot" /></a>
           <p>Survey Page</p>
         </div>
       </div>
       <div class="row project-tile">
         <div class="column centered">
-          <a href="http://www.rockoftheearth.com/ubik"><img src="../public/images/ubikpageimage.png"
+          <a href="http://www.rockoftheearth.com/ubik"><img src="./images/ubikpageimage.png"
               alt="ubik page screenshot" /></a>
           <p>Product Landing and Shopping Page</p>
         </div>
         <div class="column centered">
-          <a href="http://www.rockoftheearth.com/jscalchowto"><img src="../public/images/techpageimage.png"
+          <a href="http://www.rockoftheearth.com/jscalchowto"><img src="./images/techpageimage.png"
               alt="technical page screenshot" /></a>
           <p>Technical Documentation How-To Page</p>
         </div>
         <div class="column centered">
-          <a href="http://www.rockoftheearth.com/"><img src="../public/images/portfoliopageimage.png"
+          <a href="http://www.rockoftheearth.com/"><img src="./images/portfoliopageimage.png"
               alt="portfolio page screenshot" /></a>
           <p>My Portfolio Home Page</p>
         </div>
