lots of changes here including adding sections and redefining core code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css" />
   <title>My Portfolio Website</title>
@@ -11,10 +12,10 @@
   <!--NAVIGATION BAR-->
   <nav id="navbar">
     <div class="topnav">
-      <a href="#navbar">Home</a>
-      <a href="#contact">Contact</a>
-      <a href="#projects">Projects</a>
-      <a href="#aboutme">About Me</a>
+      <a class="nav-link" href="#navbar">Home</a>
+      <a class="nav-link" href="#contact">Contact</a>
+      <a class="nav-link" href="#projects">Projects</a>
+      <a class="nav-link" href="#aboutme">About Me</a>
     </div>
   </nav>
 </header>
@@ -46,7 +47,7 @@
     <br />
     <!--PROJECTS SECTION-->
     <div id="projects">
-      <h2 id="projects" class="projects">HTML/CSS Projects</h2>
+      <h2 id="projects" class="projects">Simple Web Page Projects</h2>
       <div class="row project-tile">
         <div class="column centered">
           <a href="http://johncena.rockoftheearth.com/"><img src="./images/cenapageimage.png"
@@ -81,37 +82,39 @@
           <p>My Portfolio Home Page</p>
         </div>
       </div>
-      <!--<section class="jsProjects">
-    <h2 id="projects" class="projects">JavaScript Projects</h2>
-    <div class="row project-tile">
+      <!-- <section class="jsProjects"> -->
+      <h2 id="projects" class="projects">JavaScript</h2>
+      <div class="row project-tile">
         <div class="column centered">
-            <a href="http://www.rockoftheearth.com/rps/"><img src="" alt="rock paper scissors page screenshot 166x175px"></a>
-            <p>Rock Paper Scissors JavaScript Game</p>
-        </div>       
+          <a href="http://rps.rockoftheearth.com/"><img src="./images/rps.png"
+              alt=" rock paper scissors page screenshot 166x175px"></a>
+          <p>Rock Paper Scissors JavaScript Game</p>
+        </div>
         <div class="column centered">
-          <a href=""><img src="" alt=""></a>
-          <p>Placeholder for JS Project</p>
-      </div> 
-      <div class="column centered">
-        <a href=""><img src="" alt=""></a>
-        <p>Placeholder for JS Project</p>
-    </div>      
-    </div>
-    <div class="row project-tile">
-      <div class="column centered">
-          <a href=""><img src="" alt=""></a>
-          <p>Placeholder for JS Project</p>
-      </div>       
-      <div class="column centered">
-        <a href=""><img src="" alt=""></a>
-        <p>Placeholder for JS Project</p>
-    </div> 
-    <div class="column centered">
-      <a href=""><img src="" alt=""></a>
-      <p>Placeholder for JS Project</p>
-  </div>      
-  </div>
-  </section>-->
+          <a href="http://drummachine.rockoftheearth.com"><img src="./images/drummachine.png"
+              alt="drum machine page screenshot 166x175"></a>
+          <p>JavaScript Keyboard Drum Machine</p>
+        </div>
+        <div class="column centered">
+          <a href="http://clock.rockoftheearth.com"><img src="./images/clock.png" alt="clock screenshot 166x175"></a>
+          <p>JavaScript Based Clock</p>
+        </div>
+      </div>
+      <!-- <div class="row project-tile">
+          <div class="column centered">
+            <a href=""><img src="" alt=""></a>
+            <p>Placeholder for JS Project</p>
+          </div>
+          <div class="column centered">
+            <a href=""><img src="" alt=""></a>
+            <p>Placeholder for JS Project</p>
+          </div>
+          <div class="column centered">
+            <a href=""><img src="" alt=""></a>
+            <p>Placeholder for JS Project</p>
+          </div>
+        </div> -->
+      <!-- </section> -->
     </div>
     <div class="mids container-2" id="contact">
       <div class="row">
