fixed links jesus

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
           <p>Rock Paper Scissors JavaScript Game</p>
         </div>
         <div class="column centered">
-          <a href="http://drummachine.rockoftheearth.com"><img src="./images/drummachine.png"
+          <a href="http://drums.rockoftheearth.com"><img src="./images/drummachine.png"
               alt="drum machine page screenshot 166x175"></a>
           <p>JavaScript Keyboard Drum Machine</p>
         </div>
         <div class="column centered">
-          <a href="http://clock.rockoftheearth.com"><img src="./images/clock.png" alt="clock screenshot 166x175"></a>
+          <a href="http://time.rockoftheearth.com"><img src="./images/clock.png" alt="clock screenshot 166x175"></a>
           <p>JavaScript Based Clock</p>
         </div>
       </div>
