--- a/index.html
+++ b/index.html
@@ -2,137 +2,45 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&amp;display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>My Portfolio Website</title>
+  <meta charset="UTF-8">
+  <title>Mitch Levy</title>
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+  <link href='./style.css' rel='stylesheet' type='text/css'>
 </head>
-<header>
-  <!--NAVIGATION BAR-->
-  <nav id="navbar">
-    <div class="topnav">
-      <a class="nav-link" href="#navbar">Home</a>
-      <a class="nav-link" href="#contact">Contact</a>
-      <a class="nav-link" href="#projects">Projects</a>
-      <a class="nav-link" href="#aboutme">About Me</a>
-    </div>
-  </nav>
-</header>
 
 <body>
-  <div class="container">
-    <!--WELCOME SECTION-->
-    <div class="column centered welcome-section" id="welcome-section">
-      <h1>Mitch Levy</h1>
-      <h3>
-        <i><a href="mailto:mitch@rockoftheearth.com">mitch@rockoftheearth.com</a></i>
-      </h3>
+  <div class="panels">
+    <div class="panel panel1">
+      <p>B<a href="blog.rockoftheearth.com" target="_blank">log/Writing</a></p>
+      <p>About</p>
+      <p><a href="resume.rockoftheearth.com" target="_blank">Resume</a></p>
     </div>
-  </div>
-  <div class="container container-3">
-    <div class="container-2">
-      <h2 id="aboutme">About Me</h2>
-      <p>
-        I'm Mitch. I'm based in Los Angeles, California. I'm learning to
-        design the front and back end of webpages. I work full time as a
-        health and fitness coach and hope to bring the same type of
-        personality and helpful patience to a new web development career.
-      </p>
+    <div class="panel panel2">
+      <p><a href="simpleweb.rockoftheearth.com" target="_blank">Simple HTML</a></p>
+      <p>Web Projects</p>
+      <p><a href="js.rockoftheearth.com" target="_blank">JavaScript</a></p>
     </div>
-    <br />
-    <br />
-    <hr />
-    <br />
-    <br />
-    <!--PROJECTS SECTION-->
-    <div id="projects">
-      <h2 id="projects" class="projects">Simple Web Page Projects</h2>
-      <div class="row project-tile">
-        <div class="column centered">
-          <a href="http://johncena.rockoftheearth.com/"><img src="./images/cenapageimage.png"
-              alt="john cena page screenshot" /></a>
-          <p>Tribute Webpage for actor and legend John Cena</p>
-        </div>
-        <div class="column centered">
-          <a href="http://google.rockoftheearth.com/"><img src="./images/googlepageimage.png"
-              alt="google page screenshot" /></a>
-          <p>Nonfuctional Recreation of the Google Homepage</p>
-        </div>
-        <div class="column centered">
-          <a href="http://survey.rockoftheearth.com/"><img src="./images/surveypageimage.png"
-              alt="survey page screenshot" /></a>
-          <p>Survey Page</p>
-        </div>
-      </div>
-      <div class="row project-tile">
-        <div class="column centered">
-          <a href="http://ubik.rockoftheearth.com/"><img src="./images/ubikpageimage.png"
-              alt="ubik page screenshot" /></a>
-          <p>Product Landing and Shopping Page</p>
-        </div>
-        <div class="column centered">
-          <a href="http://jscalc.rockoftheearth.com/"><img src="./images/techpageimage.png"
-              alt="technical page screenshot" /></a>
-          <p>Technical Documentation How-To Page</p>
-        </div>
-        <div class="column centered">
-          <a href="http://www.rockoftheearth.com/"><img src="./images/portfoliopageimage.png"
-              alt="portfolio page screenshot" /></a>
-          <p>My Portfolio Home Page</p>
-        </div>
-      </div>
-      <!-- <section class="jsProjects"> -->
-      <h2 id="projects" class="projects">JavaScript</h2>
-      <div class="row project-tile">
-        <div class="column centered">
-          <a href="http://rps.rockoftheearth.com/"><img src="./images/rps.png"
-              alt=" rock paper scissors page screenshot 166x175px"></a>
-          <p>Rock Paper Scissors JavaScript Game</p>
-        </div>
-        <div class="column centered">
-          <a href="http://drums.rockoftheearth.com"><img src="./images/drummachine.png"
-              alt="drum machine page screenshot 166x175"></a>
-          <p>JavaScript Keyboard Drum Machine</p>
-        </div>
-        <div class="column centered">
-          <a href="http://time.rockoftheearth.com"><img src="./images/clock.png" alt="clock screenshot 166x175"></a>
-          <p>JavaScript Based Clock</p>
-        </div>
-      </div>
-      <!-- <div class="row project-tile">
-          <div class="column centered">
-            <a href=""><img src="" alt=""></a>
-            <p>Placeholder for JS Project</p>
-          </div>
-          <div class="column centered">
-            <a href=""><img src="" alt=""></a>
-            <p>Placeholder for JS Project</p>
-          </div>
-          <div class="column centered">
-            <a href=""><img src="" alt=""></a>
-            <p>Placeholder for JS Project</p>
-          </div>
+    <div class="panel panel3">
+      <p><a href="video.rockoftheearth.com" target="_blank">Video</a></p>
+      <p>Media Projects</p>
+      <p><a href="print.rockoftheearth.com" target="_blank">Photoshop</a></p>
+    </div>
+    <div class="panel panel4">
+      <p><a href="mailto:mitch@rockoftheearth.com">Email Me</a></p>
+      <p>Contact</p>
+      <p><a href="https://www.linkedin.com/in/mitch-levy/" target="_blank">LinkedIn</a></p>
+    </div>
+    <!-- <div class="panel panel5">
+            <p><a href="https://github.com/hurryupmitch" target="_blank">GitHub</a></p>
+            <p>Links</p>
+            <p><a href="https://www.instagram.com/hurryupmitch/" target="_blank">Instagram</a></p>
         </div> -->
-      <!-- </section> -->
-    </div>
-    <div class="mids container-2" id="contact">
-      <div class="row">
-        <div class="column">
-          <a id="profile-link" href="https://www.freecodecamp.org/mitchlevy" target="_blank">FCC Profile</a>
-        </div>
-        <div class="column">
-          <a id="profile-link2" href="https://github.com/hurryupmitch" target="_blank">Github</a>
-        </div>
-        <div class="column">
-          <a id="profile-link3" href="mailto:mitch@rockoftheearth.com">Email</a>
-        </div>
-      </div>
-      <input type="button" value="Click Me" onclick="play()" /><audio id="audio"
-        src="http://thealexfield.com/mitch/johncena.mp3"></audio>
-    </div>
   </div>
+
   <script src="./script.js"></script>
+
+
+
 </body>
 
 </html>
