one line of code fix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="panel panel3">
       <p><a href="video.rockoftheearth.com" target="_blank">Video</a></p>
       <p>Media Projects</p>
-      <p><a href="print.rockoftheearth.com" target="_blank">Photoshop</a></p>
+      <p><a href="print.rockoftheearth.com" target="_blank">Print</a></p>
     </div>
     <div class="panel panel4">
       <p><a href="mailto:mitch@rockoftheearth.com">Email Me</a></p>
