actually this might fix the mobile problem

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="panels">
     <div class="panel panel1">
-      <p>B<a href="blog.rockoftheearth.com" target="_blank">log/Writing</a></p>
+      <p><a href="blog.rockoftheearth.com" target="_blank">Blog/Writing</a></p>
       <p>About</p>
       <p><a href="resume.rockoftheearth.com" target="_blank">Resume</a></p>
     </div>
