adjusted page redirection addresses

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
   <div class="panels">
     <div class="panel panel1">
-      <p><a href="blog.rockoftheearth.com" target="_blank">Blog/Writing</a></p>
+      <p><a href="http://www.rockoftheearth.com/blog" target="_blank">Blog/Writing</a></p>
       <p>About</p>
-      <p><a href="resume.rockoftheearth.com" target="_blank">Resume</a></p>
+      <p><a href="http://www.rockoftheearth.com/resume" target="_blank">Resume</a></p>
     </div>
     <div class="panel panel2">
-      <p><a href="simpleweb.rockoftheearth.com" target="_blank">Simple HTML</a></p>
+      <p><a href="http://www.rockoftheearth.com/simpleweb" target="_blank">Simple HTML</a></p>
       <p>Web Projects</p>
-      <p><a href="js.rockoftheearth.com" target="_blank">JavaScript</a></p>
+      <p><a href="http://www.rockoftheearth.com/js" target="_blank">JavaScript</a></p>
     </div>
     <div class="panel panel3">
-      <p><a href="video.rockoftheearth.com" target="_blank">Video</a></p>
+      <p><a href="http://www.rockoftheearth.com/video" target="_blank">Video</a></p>
       <p>Media Projects</p>
       <p><a href="print.rockoftheearth.com" target="_blank">Print</a></p>
     </div>
