--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
   <div class="panels">
     <div class="panel panel1">
-      <p><a href="/blog" target="_blank">Blog/Writing</a></p>
+      <p><a href="/blog">About Me</a></p>
       <p>About</p>
-      <p><a href="/resume" target="_blank">Resume</a></p>
+      <p><a href="/resume">Resume</a></p>
     </div>
     <div class="panel panel2">
-      <p><a href="/simpleweb" target="_blank">Simple HTML</a></p>
+      <p><a href="/simpleweb">Simple HTML</a></p>
       <p>Web Projects</p>
-      <p><a href="/js" target="_blank">JavaScript</a></p>
+      <p><a href="/js">JavaScript</a></p>
     </div>
     <div class="panel panel3">
-      <p><a href="/video" target="_blank">Video</a></p>
+      <p><a href="/video">Video</a></p>
       <p>Media Projects</p>
-      <p><a href="/print" target="_blank">Print</a></p>
+      <p><a href="/print">Print</a></p>
     </div>
     <div class="panel panel4">
       <p><a href="mailto:mitch@rockoftheearth.com">Email Me</a></p>
