--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+
   <div class="panels">
     <div class="panel panel1">
       <p><a href="/blog">About Me</a></p>
-      <p>About</p>
+      <p>Mitch </br> Levy</p>
       <p><a href="/resume">Resume</a></p>
     </div>
     <div class="panel panel2">
