--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="panels">
     <div class="panel panel1">
-      <p><a href="/blog">About Me</a></p>
+      <p><a href="/about">About Me</a></p>
       <p>Mitch </br> Levy</p>
       <p><a href="/resume">Resume</a></p>
     </div>
